# afwf_example-project

./: .coveragerc  .gitignore  02-Initialize-a-New-Project.rst  03-Development-Guide.rst  04-Debug-Guide.rst  Makefile  README.rst  info.plist  main.py  poetry-lock-hash.json  pyproject.toml  pyproject_ops.json  release-history.rst  requirements-automation.txt  requirements-dev.txt  requirements-doc.txt  requirements-test.txt  requirements.txt  setup.py
.github/workflows/: main.yml
afwf_example/: __init__.py  cache.py  paths.py  workflow.py
afwf_example/handlers/: error.py  memorize_cache.py  open_file.py  open_url.py  read_file.py  set_settings.py  view_settings.py  write_file.py
docs/: 01-About-This-Best-Practice.rst  03-Development-Guide.rst  05-Unit-Test-Guide.rst  06-Release-Guide.rst
docs/source/: conf.py
docs/source/01-About-This-Best-Practice/: index.rst
docs/source/02-Initialize-a-New-Project/: index.rst
docs/source/03-Development-Guide/: index.rst
docs/source/05-Unit-Test-Guide/: index.rst
docs/source/06-Release-Guide/: index.rst
docs/source/afwf_example/: __init__.rst  cache.rst  fuzzymatch.rst  settings.rst  workflow.rst
docs/source/afwf_example/handlers/: __init__.rst  error.rst  memorize_cache.rst  open_file.rst  open_url.rst  read_file.rst  set_settings.rst  view_settings.rst  write_file.rst
tests/: test_handler_error.py  test_handler_memorize_cache.py  test_handler_open_file.py  test_handler_open_url.py  test_handler_read_file.py  test_handler_view_settings.py  test_handler_write_file.py  test_import.py  test_workflow.py
